# MyLearning

./: .gitignore  README.md
.github/workflows/: build.yml
MyLearning/: MyLearningSolution.sln
MyLearning/CPlusPlus/: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  c_plus_plus.cpp  c_plus_plus.h  const.h  cpp_interview_questions.md  diamond_problem.h  exercises.h  functor.h  main.cpp  move_demo.h  shared_ptr_example.h  simple_shared_ptr.h  simple_unique_ptr.h  variadic_templates.h  vcpkg.json  vector_example.h  virtual_destructor.h  weak_ptr_example.h
MyLearning/CPlusPlus/Pointers/: notes.txt  notes2.txt  pointers.h  rules.txt
MyLearning/CPlusPlus/stl/: custom_contaners.txt  stl.h  stl.txt
MyLearning/CSharpPractice/: CSharpPractice.csproj  Program.cs
MyLearning/CSharpPractice/Collections/: PatientQueue.cs
MyLearning/CSharpPractice/DelegatesEvents/: ActionExercise.cs  BasicDelegate.cs  Events.cs  MulticastDelegates.cs
MyLearning/CSharpPractice/DesignPatterns/: AbstractFactory.cs  Adapter.cs  Bridge.cs  Builder.cs  ChainOfResponsibility.cs  Command.cs  Composite.cs  DesignPatterns_Guide.txt  Exercise.txt  Facade.cs  FlyWeight.cs  Iterator.cs  Memento.cs  Proxy.cs  Singleton.cs  State.cs  Strategy.cs  UnitOfWork.cs  Visitor.cs
MyLearning/CSharpPractice/Hashing/: Hashing.cs
MyLearning/CSharpPractice/Linq/: CountBy.cs  CountWordsWithPrefix.cs  FormPairs.cs  GroupAnagrams.cs  Leader.cs  LeftJoin.cs  LinqExtensions.cs  ReplaceEqual.cs
MyLearning/CSharpPractice/Multithreading/: AlternateEvenOdd.cs  Cancellation.cs  ContinueWith.cs  DeadLock.cs  MultipleThreads.cs  PauseThread.cs  PrintEvenOdd.cs  ProducerConsumerQueue.cs  ReadLargeFile.cs  SemaphoreSlimExample.cs
MyLearning/CSharpPractice/OOP/: Abstraction.cs  Composition.cs
MyLearning/CSharpPractice/SOLID/: DependencyInversionPrinciple.cs  InterfaceSegregationPrinciple.cs  LiskovSubstitutionPrinciple.cs  OpenClosePrinciple.cs  SingleResponsibilityPrinciple.cs
MyLearning/DsaPractice/: DsaPractice.csproj  LRUCache.cs  Program.cs  README.md
MyLearning/DsaPractice/Arrays/: DNF.cs  InterleavingString.cs  Leader.cs  LongestSubstring.cs  MissingNumbers.cs  ReverseVowels.cs  SecondLargestThirdLargest.cs  SortZeosOnes.cs  SortedSquares.cs  SubArraySum.cs  SubStringPresent.cs  TwoSum.cs  Union.cs
MyLearning/DsaPractice/BinarySearch/: FirstOccurance.cs  KokoEatingBananas.cs  LowerBound.cs  RotatedSortedArray.cs  Search.cs  ShipCapacity.cs
MyLearning/DsaPractice/Bit Manipulation/: GetBinary.cs
MyLearning/DsaPractice/BitManipulation/: GetBinary.cs
MyLearning/Omniverse/: .gitignore  README.md  omni_kit_api_reference.md
MyLearning/PythonPractice/: main.py
MyLearning/QtApp/: CMakeLists.txt  Main.qml  main.cpp
MyLearning/Rust/src/: main.rs  (+2 more)
MyLearning/WinFormsAppPractice/: WinFormsAppPractice.sln
MyLearning/WpfPracticeApp/: App.xaml  App.xaml.cs  BackgroundBehavior.cs  ButtonControlTemplate.xaml  ButtonControlTemplate.xaml.cs  ContactForm.xaml  ContactForm.xaml.cs  DockWindow.xaml  DockWindow.xaml.cs  Events.txt  MainWindow.xaml  MainWindow.xaml.cs  MultipleOwners.xaml  MultipleOwners.xaml.cs  NumericOnlyBehavior.cs  ProductFeedback.xaml  ProductFeedback.xaml.cs  README.md  UserControlHostWindow.xaml  UserControlHostWindow.xaml.cs  VSCode.xaml  VSCode.xaml.cs  WpfPracticeApp.csproj
dsa-practice-ram/: MyLearningSolution.sln  dsa-practice-ram.sln
dsa-practice-ram/dsa-practice-ram/: Program.cs  dsa-practice-ram.csproj
(+269 files in other folders)
